sistema-quadro-lotacao/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sistema-quadro-lotacao
  labels:
    name: sistema-quadro-lotacao
    environment: production
